Added some more food trucks

--- a/src/main/resources/trucks.yaml
+++ b/src/main/resources/trucks.yaml
@@ -139,6 +139,7 @@ categories: Desserts
 url: http://www.morecupcakes.com/
 iconUrl: http://twimg0-a.akamaihd.net/profile_images/1121172140/moremobile_normal.jpg
 foursquare: 4c8a7e6755f9b713ad994add
+twittalyzer: "on"
 ---
 id: homagesf
 twitter: homagesf
@@ -208,6 +209,7 @@ categories: Dessert
 url: http://www.foreveryogurt.com
 iconUrl: http://twimg0-a.akamaihd.net/profile_images/1332195359/twitterlogo1_normal.png
 foursquare: 4e8a2dc12c5b5dc29df63d76
+twittalyzer: "on"
 ---
 id: courageouscakes
 twitter: courageouscakes
@@ -231,6 +233,7 @@ categories: Food
 url: http://www.thewagyuwagon.com
 iconUrl: http://twimg0-a.akamaihd.net/profile_images/1310282168/D_2_WagyuWagon_ID_Identity_normal.jpg
 foursquare: 4e5933f21f6e804280c2753e
+twittalyzer: "on"
 ---
 id: flavor180
 twitter: flavor180
@@ -279,6 +282,7 @@ categories: Cajun
 url: http://www.mobilefoodunit.com
 iconUrl: http://twimg0-a.akamaihd.net/profile_images/1393048160/mfuLOGO_normal.png
 foursquare: 4b990b1cf964a520975d35e3
+twittalyzer: "on"
 ---
 id: chickpeadelight
 twitter: chickpeadelight
@@ -286,6 +290,7 @@ name: Chickpea Delights
 categories: Food
 url: http://www.chickpeadelights.com
 iconUrl: http://twimg0-a.akamaihd.net/profile_images/1525691204/logo_small_normal.jpg
+twittalyzer: "on"
 ---
 id: starfruitcafe
 twitter: starfruitcafe
@@ -323,6 +328,7 @@ twitter: brownsugar_cafe
 name: Brown Sugar Cafe
 categories: Sweet
 iconUrl: http://twimg0-a.akamaihd.net/profile_images/1540568772/cupcake_1_normal.jpg
+twittalyzer: "on"
 ---
 id: hummingbirdtogo
 twitter: hummingbirdtogo
@@ -366,3 +372,4 @@ twitter: steakwch
 name: Steakwch
 categories: Savory
 iconUrl: http://a1.twimg.com/profile_images/1443279567/Twitter_Pic_normal.JPG
+twittalyzer: "on"
