Make tamale spaceship use twittalyzer

--- a/src/main/resources/trucks.yaml
+++ b/src/main/resources/trucks.yaml
@@ -5,6 +5,7 @@ categories: Savory
 iconUrl: "http://a3.twimg.com/profile_images/1402134609/be86_1_1__normal.jpg"
 url: http://thetamalespaceship.com/
 foursquare: 4da48a23b521224b03cd34ee
+twittalyzer: "on"
 ---
 id: meatyballs1
 twitter: fossfoodtrucks
