Fixed google and yahoo geolocators so that they return null for a city

--- a/src/main/resources/trucks.yaml
+++ b/src/main/resources/trucks.yaml
@@ -383,3 +383,10 @@ name: Two Italians
 categories: Savory
 iconUrl: http://twimg0-a.akamaihd.net/profile_images/1504340611/023_normal.JPG
 twittalyzer: "on"
+---
+id: stemartaen
+twitter: stemartaen
+name: Ste Martaen
+categories: Savory
+iconUrl: http://twimg0-a.akamaihd.net/profile_images/203922487/stemartaen_logo_normal.jpg
+twittalyzer: "on"
