Added sweetspotmac's foursquare id

--- a/src/main/resources/trucks.yaml
+++ b/src/main/resources/trucks.yaml
@@ -361,6 +361,7 @@ twitter: sweetspotmac
 name: Sweet Spot Macaroons
 url: http://www.sweetspotmacarons.com
 categories: Sweet
+foursquare: 4e9f0e2a7beb438c5e7bd7d0
 iconUrl: http://twimg0-a.akamaihd.net/profile_images/1514611309/Logo_SweetSpotMac_Block4C_Avatar_normal.jpg
 ---
 id: bigstartruck
