--- a/src/main/resources/trucks.yaml
+++ b/src/main/resources/trucks.yaml
@@ -5,7 +5,7 @@ categories: Savory
 iconUrl: "http://a3.twimg.com/profile_images/1402134609/be86_1_1__normal.jpg"
 url: http://thetamalespaceship.com/
 foursquare: 4da48a23b521224b03cd34ee
-twittalyzer: "off"
+twittalyzer: "on"
 ---
 id: meatyballs1
 twitter: fossfoodtrucks
@@ -70,6 +70,7 @@ categories: Cupcakes
 url: http://www.sweetridesf.com/
 iconUrl: http://si0.twimg.com/profile_images/1165252076/Sweet_Ride_Truck_normal.jpg
 foursquare: 4dade04e6e81e2dffdbbf99b
+twittalyzer: "on"
 ---
 id: flirtycupcakes
 twitter: flirtycupcakes
@@ -116,6 +117,7 @@ twitter: gigisbakeshop
 name: Gigis Bake Shop
 categories: Cupcake
 iconUrl: http://twimg0-a.akamaihd.net/profile_images/1503976385/GiGI_TAG_v07_normal.jpg
+twittalyzer: "on"
 foursquare: 4e66a54262e1706d82473eb7
 ---
 id: thepiemachine
@@ -258,6 +260,7 @@ name: Fido To Go
 categories: Dog Food
 url: http://www.fidotogo.net
 iconUrl: http://twimg0-a.akamaihd.net/profile_images/1344354728/truck4profile_normal.jpg
+twittalyzer: "on"
 foursquare: 4de95f941520132cb978fdf2
 ---
 id: zullosfoodtruck
@@ -362,6 +365,7 @@ name: Sweet Spot Macaroons
 url: http://www.sweetspotmacarons.com
 categories: Sweet
 foursquare: 4e9f0e2a7beb438c5e7bd7d0
+twittalyzer: "on"
 iconUrl: http://twimg0-a.akamaihd.net/profile_images/1514611309/Logo_SweetSpotMac_Block4C_Avatar_normal.jpg
 ---
 id: bigstartruck
