turned twittalyzer on for foreveryogurt

--- a/src/main/resources/trucks.yaml
+++ b/src/main/resources/trucks.yaml
@@ -214,6 +214,15 @@ iconUrl: http://twimg0-a.akamaihd.net/profile_images/1332195359/twitterlogo1_nor
 foursquare: 4e8a2dc12c5b5dc29df63d76
 twittalyzer: "on"
 ---
+id: foreveryogurt
+twitter: foreveryogurt
+name: Forever Yogurt
+categories: Dessert
+url: http://www.foreveryogurt.com
+iconUrl: http://twimg0-a.akamaihd.net/profile_images/1332195359/twitterlogo1_normal.png
+foursquare: 4e8a2dc12c5b5dc29df63d76
+twittalyzer: "on"
+---
 id: courageouscakes
 twitter: courageouscakes
 name: Cupcakes for Courage
