--- a/src/main/resources/trucks.yaml
+++ b/src/main/resources/trucks.yaml
@@ -54,6 +54,7 @@ name: The Slide Ride
 categories: Sandwich
 iconUrl: http://si0.twimg.com/profile_images/1323538462/ribeye_normal.jpg
 foursquare: 4d9e5fc8640b54817800ca2d
+twittalyzer: "on"
 ---
 id: thesouthernmac
 twitter: thesouthernmac
@@ -202,6 +203,7 @@ id: brownbagtruck
 twitter: brownbagtruck
 name: Brown Bag Truck
 categories: Food
+url: http://www.brownbaglunchtruck.com/
 iconUrl: http://twimg0-a.akamaihd.net/profile_images/1500530673/twitter_pic_normal.jpg
 foursquare: 4de668e2d1648041649ed635
 ---
@@ -292,7 +294,6 @@ id: bayouexpress
 twitter: mobilefoodunit
 name: Bayou Express
 categories: Cajun
-url: http://www.mobilefoodunit.com
 iconUrl: http://twimg0-a.akamaihd.net/profile_images/1393048160/mfuLOGO_normal.png
 foursquare: 4b990b1cf964a520975d35e3
 twittalyzer: "on"
