--- a/src/main/resources/trucks.yaml
+++ b/src/main/resources/trucks.yaml
@@ -54,7 +54,7 @@ name: The Slide Ride
 categories: Sandwich
 iconUrl: http://si0.twimg.com/profile_images/1323538462/ribeye_normal.jpg
 foursquare: 4d9e5fc8640b54817800ca2d
-twittalyzer: "on"
+twittalyzer: "off"
 ---
 id: thesouthernmac
 twitter: thesouthernmac
@@ -357,11 +357,12 @@ categories: Savory
 iconUrl: http://twimg0-a.akamaihd.net/profile_images/1591805989/logo_normal.jpg
 twittalyzer: "on"
 ---
-id: lilliesqchicago
-twitter: lillieqschicago
+id: lqmeatmobile
+twitter: lqmeatmobile
 name: Lillies Q Chicago
 categories: Savory
 iconUrl: http://twimg0-a.akamaihd.net/profile_images/1317636505/NewLilliesQlogo_normal.jpg
+twittalyzer: "on"
 ---
 id: puffsofdoom
 twitter: puffsofdoom
