--- a/src/main/resources/trucks.yaml
+++ b/src/main/resources/trucks.yaml
@@ -406,3 +406,18 @@ name: Ste Martaen
 categories: Savory
 iconUrl: http://twimg0-a.akamaihd.net/profile_images/203922487/stemartaen_logo_normal.jpg
 twittalyzer: "on"
+---
+id: ducknrolltruck
+twitter: ducknrolltruck
+name: Duck n Roll Food Truck
+categories: Savory
+iconUrl: https://twimg0-a.akamaihd.net/profile_images/1460919739/Final_Duck_Logo_v2_normal.jpg
+twittalyzer: "on"
+---
+id: baomouth
+twitter: baomouth
+name: Wow Bao
+categories: Asian
+iconUrl: https://twimg0-a.akamaihd.net/profile_images/565404613/twitter_icon_normal.jpg
+twittalyzer: "on"
+
