--- a/src/main/resources/trucks.yaml
+++ b/src/main/resources/trucks.yaml
@@ -430,4 +430,11 @@ categories: Savory
 url: http://www.jamrestaurant.com/
 iconUrl: http://a2.twimg.com/profile_images/1607815357/TJ_normal
 twittalyzer: "on"
+---
+id: samichbox
+twitter: samichbox
+name: Samich Box
+categories: Savory
+iconUrl: http://twimg0-a.akamaihd.net/profile_images/1519926498/FBAngle_normal.jpg
+twittalyzer: "on"
 
