Turned on twittalyzer for zullosfoodtruck

--- a/src/main/resources/trucks.yaml
+++ b/src/main/resources/trucks.yaml
@@ -282,6 +282,7 @@ categories: Italian
 url: http://www.zullosinc.com
 iconUrl: http://a2.twimg.com/profile_images/1472969323/logozullo_normal.jpg
 foursquare: 4e4ac0c6315100ba6f72d3dc
+twittalyzer: "on"
 ---
 id: flirtycupcakes2
 twitter: firtycupcakes
