--- a/src/main/resources/trucks.yaml
+++ b/src/main/resources/trucks.yaml
@@ -438,4 +438,11 @@ name: Samich Box
 categories: Savory
 iconUrl: http://twimg0-a.akamaihd.net/profile_images/1519926498/FBAngle_normal.jpg
 twittalyzer: "on"
+---
+id: mjexpress14
+twitter: mjexpress14
+name: Mojo Express
+categories: Coffee
+iconUrl: https://twimg0-a.akamaihd.net/sticky/default_profile_images/default_profile_5_normal.png
+twittalyzer: "on"
 
