--- a/src/main/resources/trucks.yaml
+++ b/src/main/resources/trucks.yaml
@@ -446,4 +446,12 @@ name: Mojo Express
 categories: Coffee
 iconUrl: http://twimg0-a.akamaihd.net/sticky/default_profile_images/default_profile_5_normal.png
 twittalyzer: "on"
+---
+id: papostacos
+twitter: papostacos
+name: Papos Tacos
+categories: Mexican
+iconUrl: https://twimg0-a.akamaihd.net/profile_images/1612295747/efr8d9MJ_normal
+twittalyzer: "on"
+
 
