Changed brown sugar cafe to sugarpiecafe

--- a/src/main/resources/trucks.yaml
+++ b/src/main/resources/trucks.yaml
@@ -356,9 +356,9 @@ iconUrl: http://twimg0-a.akamaihd.net/profile_images/1562762202/gogorectangle_no
 foursquare: 4e85fc31b634ae3cdbc9d05a
 twittalyzer: "on"
 ---
-id: brownsugarcafe
-twitter: brownsugar_cafe
-name: Brown Sugar Cafe
+id: sugarpiecafe
+twitter: sugarpiecafe
+name: Sugar Pie Cafe
 categories: Sweet
 iconUrl: http://twimg0-a.akamaihd.net/profile_images/1540568772/cupcake_1_normal.jpg
 twittalyzer: "on"
