Added some more trucks to the twittalyzer

--- a/src/main/resources/trucks.yaml
+++ b/src/main/resources/trucks.yaml
@@ -14,6 +14,7 @@ categories: Savory
 url: http://www.meatyballsmobile.com
 iconUrl: http://twimg0-a.akamaihd.net/profile_images/1204282220/Meatyballs_Mobile_Logo_A_normal.jpg
 foursquare: 4cb70527651cb7135bf03a3a
+twittalyzer: "on"
 ---
 id: meatyballs2
 twitter: fossfoodtrucks
@@ -90,6 +91,7 @@ categories: Mexican
 url: http://www.taquerofusion.com/
 iconUrl: http://si0.twimg.com/profile_images/1312553461/LogoTwitter_normal.jpg
 foursquare: 4e037bf8c65b8061424e9805
+twittalyzer: "on"
 ---
 id: hautesausage1
 twitter: hautesausage
@@ -181,6 +183,7 @@ name: Culture Yogurt
 categories: Dessert
 iconUrl: http://twimg0-a.akamaihd.net/profile_images/1484907277/logosmall_normal.jpg
 foursquare: 4e4bf6bb6365dbba614e6ffa
+twittalyzer: "on"
 ---
 id: adelitatruck
 twitter: adelitatruck
@@ -214,6 +217,7 @@ name: Sweet Miss Givings
 categories: Dessert
 url: http://www.sweetmissgivings.com
 iconUrl: http://twimg0-a.akamaihd.net/profile_images/1192829259/photo_normal.JPG
+twittalyzer: "on"
 ---
 id: brownbagtruck
 twitter: brownbagtruck
@@ -257,6 +261,7 @@ name: Jerkin on Wheels
 categories: Food
 url: http://www.jerkinonwheels.com/
 iconUrl: http://twimg0-a.akamaihd.net/profile_images/1514860552/0001Xf_normal.jpg
+twittalyzer: "on"
 ---
 id: thewagyuwagon
 twitter: thewagyuwagon
@@ -315,6 +320,7 @@ name: Bayou Express
 categories: Cajun
 iconUrl: http://twimg0-a.akamaihd.net/profile_images/1393048160/mfuLOGO_normal.png
 foursquare: 4b990b1cf964a520975d35e3
+twittalyzer: "on"
 ---
 id: chickpeadelight
 twitter: chickpeadelight
@@ -347,6 +353,7 @@ name: Ja Grill On The Go
 categories: Jamaican
 url: http://www.jagrill.com
 iconUrl: http://twimg0-a.akamaihd.net/profile_images/1460964594/037_normal.JPG
+twittalyzer: "on"
 ---
 id: meatloafagogo
 twitter: meatloafagogo
@@ -368,6 +375,7 @@ twitter: hummingbirdtogo
 name: Heather Behm
 categories: Savory
 iconUrl: http://twimg0-a.akamaihd.net/profile_images/1268230955/IMG_6734_copy_normal.jpg
+twittalyzer: "on"
 ---
 id: donraffoodtruck
 twitter: donraffoodtruck
