Added new logo for taquerofusion

--- a/src/main/resources/trucks.yaml
+++ b/src/main/resources/trucks.yaml
@@ -99,7 +99,7 @@ twitter: taquerofusion
 name: Taquero Fusion
 categories: Mexican
 url: http://www.taquerofusion.com/
-iconUrl: http://si0.twimg.com/profile_images/1312553461/LogoTwitter_normal.jpg
+iconUrl: http://twimg0-a.akamaihd.net/profile_images/1502807893/tf-twitter-image_normal.png
 foursquare: 4e037bf8c65b8061424e9805
 twittalyzer: "on"
 facebook: /taquerofusion
