--- a/foodtruckfinderapp/src/main/resources/trucks.yaml
+++ b/foodtruckfinderapp/src/main/resources/trucks.yaml
@@ -183,7 +183,7 @@ name: Homage Street Food
 categories: Food
 iconUrl: http://twimg0-a.akamaihd.net/profile_images/1491944244/logo_orange_and_black_twit_normal.jpg
 foursquare: 4e231cb415207ed86eb64058
-twittalyzer: "on"
+twittalyzer: "off"
 facebook: /pages/Homage-Street-Food/100851666668024
 ---
 id: bridgeportpasty
@@ -543,6 +543,13 @@ twitter: fireituptruck
 name: Fire It Up
 categories: Barbecue
 iconUrl: http://twimg0-a.akamaihd.net/profile_images/1474737057/FIU_normal.jpg
+twittalyzer: "on"
+---
+id: tamalefoodie
+twitter: tamalefoodie
+name: Tamale Foodie
+categories: Mexican
+iconUrl: http://twimg0-a.akamaihd.net/profile_images/1571981401/TF_logo_R_120x120_reasonably_small_normal.jpg
 twittalyzer: "on"
 
 
