--- a/foodtruckfinderapp/src/main/resources/trucks.yaml
+++ b/foodtruckfinderapp/src/main/resources/trucks.yaml
@@ -145,7 +145,8 @@ twitter: gigisbakeshop
 name: Gigis Bake Shop
 categories: Cupcake
 iconUrl: http://twimg0-a.akamaihd.net/profile_images/1503976385/GiGI_TAG_v07_normal.jpg
-twittalyzer: "on"
+twittalyzer: "off"
+twittalyzer: "off"
 foursquare: 4e66a54262e1706d82473eb7
 facebook: /GiGisBakeShop
 ---
@@ -280,7 +281,7 @@ categories: Dessert
 url: http://www.cupcakesforcourage.com
 iconUrl: http://twimg0-a.akamaihd.net/profile_images/1268075878/twitter_logo_normal.jpg
 foursquare: 4dd6cc877d8b322663e0276c
-twittalyzer: "on"
+twittalyzer: "off"
 facebook: /cupcakesforcourage
 ---
 id: jerkinonwheels
@@ -400,7 +401,7 @@ name: Meatloaf-a-go-go
 categories: Savory
 iconUrl: http://twimg0-a.akamaihd.net/profile_images/1562762202/gogorectangle_normal.png
 foursquare: 4e85fc31b634ae3cdbc9d05a
-twittalyzer: "on"
+twittalyzer: "off"
 facebook: /meatloafagogo
 ---
 id: sugarpiecafe
@@ -476,7 +477,7 @@ twitter: stemartaen
 name: Ste Martaen
 categories: Savory
 iconUrl: http://twimg0-a.akamaihd.net/profile_images/203922487/stemartaen_logo_normal.jpg
-twittalyzer: "on"
+twittalyzer: "off"
 facebook: /SteMartaen
 ---
 id: ducknrolltruck
