--- a/foodtruckfinderapp/src/main/resources/trucks.yaml
+++ b/foodtruckfinderapp/src/main/resources/trucks.yaml
@@ -551,5 +551,12 @@ name: Tamale Foodie
 categories: Mexican
 iconUrl: http://twimg0-a.akamaihd.net/profile_images/1571981401/TF_logo_R_120x120_reasonably_small_normal.jpg
 twittalyzer: "on"
+---
+id: kingschnitzel
+twitter: kingschnitzel
+name: King Schnitzel
+categories: Food
+iconUrl: http://twimg0-a.akamaihd.net/profile_images/1519640131/SK_SideDoor_26x29_normal.png
+twittalyzer: "on"
 
 
