Added logging to truck dashboard servlet and added second steakwch truck

--- a/foodtruckfinderapp/src/main/resources/trucks.yaml
+++ b/foodtruckfinderapp/src/main/resources/trucks.yaml
@@ -464,6 +464,13 @@ categories: Savory
 iconUrl: http://a1.twimg.com/profile_images/1443279567/Twitter_Pic_normal.JPG
 twittalyzer: "on"
 ---
+id: steakwch2
+twitter: steakwch
+name: Steakwch
+categories: Savory
+iconUrl: http://a1.twimg.com/profile_images/1443279567/Twitter_Pic_normal.JPG
+twittalyzer: "off"
+---
 id: twoitalians
 twitter: twoitalians
 name: Two Italians
