Turned off twittalyzer for cookies w/ flavor

--- a/foodtruckfinderapp/src/main/resources/trucks.yaml
+++ b/foodtruckfinderapp/src/main/resources/trucks.yaml
@@ -536,7 +536,7 @@ twitter: cookieswflavor
 name: Cookies with Flavor
 categories: Cookies
 iconUrl: http://twimg0-a.akamaihd.net/profile_images/1250848560/burgandy_3pck_normal.jpg
-twittalyzer: "on"
+twittalyzer: "off"
 ---
 id: beaversdonuts
 twitter: beaversdonuts
