temporarily made flirty cupcakes use the twittalyzer

--- a/foodtruckfinderapp/src/main/resources/trucks.yaml
+++ b/foodtruckfinderapp/src/main/resources/trucks.yaml
@@ -93,6 +93,7 @@ url: http://www.flirtycupcakes.com/
 iconUrl: http://si0.twimg.com/profile_images/720492263/small_logo_normal.jpg
 foursquare: 4b990b1cf964a520975d35e3
 facebook: /flirtycupcakes
+twittalyzer: "on"
 ---
 id: taquerofusion
 twitter: taquerofusion
