Fix to eliminate matches that don't match a certain regex.  For instance, to match baomouth,  it has to have the hash tag: #bunsontherun

--- a/foodtruckfinderapp/src/main/resources/trucks.yaml
+++ b/foodtruckfinderapp/src/main/resources/trucks.yaml
@@ -502,6 +502,7 @@ categories: Asian
 iconUrl: http://twimg0-a.akamaihd.net/profile_images/565404613/twitter_icon_normal.jpg
 twittalyzer: "on"
 facebook: /hotasianbuns
+matchonlyif: "#bunsontherun"
 ---
 id: trafficjamfood
 twitter: trafficjamfood
