Added caponies express

--- a/foodtruckfinderapp/src/main/resources/trucks.yaml
+++ b/foodtruckfinderapp/src/main/resources/trucks.yaml
@@ -573,5 +573,13 @@ name: King Schnitzel
 categories: Food
 iconUrl: http://twimg0-a.akamaihd.net/profile_images/1519640131/SK_SideDoor_26x29_normal.png
 twittalyzer: "on"
+---
+id: caponiesexp
+twitter: caponiesexp
+name: Caponies Express
+categories: Food
+url: http://www.caponiespizza.com
+iconUrl: http://twimg0-a.akamaihd.net/profile_images/1575510885/caponies_normal.jpg
+twittalyzer: "on"
 
 
