Fix sweet spot macarons title

--- a/foodtruckfinderapp/src/main/resources/trucks.yaml
+++ b/foodtruckfinderapp/src/main/resources/trucks.yaml
@@ -445,7 +445,7 @@ facebook: /puffsofdoom
 ---
 id: sweetspotmac
 twitter: sweetspotmac
-name: Sweet Spot Macaroons
+name: Sweet Spot Macarons
 url: http://www.sweetspotmacarons.com
 categories: Sweet
 foursquare: 4e9f0e2a7beb438c5e7bd7d0
