--- a/foodtruckfinderapp/src/main/resources/trucks.yaml
+++ b/foodtruckfinderapp/src/main/resources/trucks.yaml
@@ -434,9 +434,17 @@ name: Lillies Q Chicago
 categories: Savory
 iconUrl: http://twimg0-a.akamaihd.net/profile_images/1317636505/NewLilliesQlogo_normal.jpg
 twittalyzer: "on"
+foursquare: 4ea5a4d9e5e8ca72b7cdbc03
 facebook: /LilliesQ
 ---
 id: puffsofdoom
+twitter: puffsofdoom
+name: Puffs of Doom
+categories: Sweet
+iconUrl: http://twimg0-a.akamaihd.net/profile_images/1340187108/Logo_Final_normal.png
+facebook: /puffsofdoom
+---
+id: puffsofdoom2
 twitter: puffsofdoom
 name: Puffs of Doom
 categories: Sweet
@@ -495,6 +503,7 @@ id: ducknrolltruck
 twitter: ducknrolltruck
 name: Duck n Roll Food Truck
 categories: Savory
+foursquare: 4eaeda69b8f765aba1eb5699
 iconUrl: http://twimg0-a.akamaihd.net/profile_images/1460919739/Final_Duck_Logo_v2_normal.jpg
 twittalyzer: "on"
 facebook: /DucknRoll
@@ -522,6 +531,7 @@ id: samichbox
 twitter: samichbox
 name: Samich Box
 categories: Savory
+foursquare: 4ec6a4ee4690116a8b17b111
 iconUrl: http://twimg0-a.akamaihd.net/profile_images/1519926498/FBAngle_normal.jpg
 twittalyzer: "on"
 ---
@@ -564,6 +574,7 @@ id: tamalefoodie
 twitter: tamalefoodie
 name: Tamale Foodie
 categories: Mexican
+foursquare: 4e8b36d59adf8878b58f8089
 iconUrl: http://twimg0-a.akamaihd.net/profile_images/1571981401/TF_logo_R_120x120_reasonably_small_normal.jpg
 twittalyzer: "on"
 ---
@@ -580,6 +591,14 @@ name: Caponies Express
 categories: Food
 url: http://www.caponiespizza.com
 iconUrl: http://twimg0-a.akamaihd.net/profile_images/1575510885/caponies_normal.jpg
+twittalyzer: "on"
+---
+id: pecanandcharlie
+twitter: pecanandcharlie
+name: Pecan and Charlie
+categories: Food
+facebook: /PecanandCharlies
+iconUrl: http://twimg0-a.akamaihd.net/profile_images/1642068394/blondmonkey_normal.JPG
 twittalyzer: "on"
 
 
